--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 	<!-- <script src="http://opensyscon.com.au:3456/target/target-script-min.js#anonymous"></script> -->
 
     <!-- ionic css -->
-    <!-- <link href="lib/css/ionicons.css" rel="stylesheet"> --> <!-- V1.5 -->
-    <link href="lib/css/ionic.css" rel="stylesheet"> <!-- V1.4.1 -->
+	<!-- This file contained both icon css and ionic css - split intow tow to allow icon updates  -->
+    <link href="lib/css/ionic.css" rel="stylesheet">
+    <link href="lib/css/ionicons.css" rel="stylesheet">
 
     <!-- your app's css -->
     <link href="css/app.css" rel="stylesheet">
@@ -41,6 +42,7 @@
     <script src="js/JobsIndexCtrl.js"></script>
     <script src="js/JobDetailCtrl.js"></script>
     <script src="js/MessageCtrl.js"></script>
+    <script src="js/BarcodeCtrl.js"></script>
     <script src="js/lb-services.js"></script>
     <script src="js/osc-services.js"></script>
     <script src="js/LoginCtrl.js"></script>
