--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script src="js/JobsIndexCtrl.js"></script>
     <script src="js/JobDetailCtrl.js"></script>
     <script src="js/MessageCtrl.js"></script>
+    <script src="js/ImageCtrl.js"></script>
     <script src="js/BarcodeCtrl.js"></script>
     <script src="js/lb-services.js"></script>
     <script src="js/osc-services.js"></script>
