--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 	<script src="js/installations.js"></script>
 	<script src="js/ng-stats.js"></script>
 	<script src="js/angular-fqueue.js"></script>
+    <script src="js/TabCtrl.js"></script>
 
 	<!-- these are for client logging via ajax to a server -->
 	<script src="js/jquery-2.1.4.min.js"></script>
