--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <script src="js/JobDetailCtrl.js"></script>
     <script src="js/MessageCtrl.js"></script>
     <script src="js/BarcodeCtrl.js"></script>
+    <script src="js/JseaCtrl.js"></script>
     <script src="js/lb-services.js"></script>
     <script src="js/osc-services.js"></script>
     <script src="js/LoginCtrl.js"></script>
