LT - initial 2.56 commit

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <script src="js/JobsIndexCtrl.js"></script>
     <script src="js/JobDetailCtrl.js"></script>
     <script src="js/MessageCtrl.js"></script>
+    <script src="js/ImageCtrl.js"></script>
     <script src="js/BarcodeCtrl.js"></script>
     <script src="js/JseaCtrl.js"></script>
     <script src="js/lb-services.js"></script>
@@ -64,6 +65,7 @@
 	<script src="js/deviceCtrl.js"></script>
 	<script src="js/applications.js"></script>
 	<script src="js/installations.js"></script>
+	<script src="js/imageCapture.js"></script>
 	<script src="js/ng-stats.js"></script>
 	<script src="js/angular-fqueue.js"></script>
     <script src="js/TabCtrl.js"></script>
