--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 	<script src="js/ng-stats.js"></script>
 	<script src="js/angular-fqueue.js"></script>
     <script src="js/TabCtrl.js"></script>
+    <!-- <script src="js/angular-spinners.js"></script> -->
 
 	<!-- these are for client logging via ajax to a server -->
 	<script src="js/jquery-2.1.4.min.js"></script>
