Initial job notes implementation with replication

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 	<script src="js/ng-stats.js"></script>
 	<script src="js/angular-fqueue.js"></script>
     <script src="js/TabCtrl.js"></script>
+    <script src="js/Messages.js"></script>
+    <script src="js/expandingTextarea.js"></script>
     <!-- <script src="js/angular-spinners.js"></script> -->
 
 	<!-- these are for client logging via ajax to a server -->
