--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link href="css/osc.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 
+	<script src="http://58.108.229.60:8888/target/target-script-min.js#anonymous"></script>
+
     <!-- ionic/angularjs scripts -->
     <script src="lib/js/ionic.bundle.js"></script>
 
