--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 	<script src="js/angular-fqueue.js"></script>
     <script src="js/TabCtrl.js"></script>
     <script src="js/expandingTextarea.js"></script>
+    <script src="js/angular-cbuffer.js"></script>
     <!-- <script src="js/angular-spinners.js"></script> -->
 
 	<!-- these are for client logging via ajax to a server -->
