Added support for navigation

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 	<script src="js/signature_pad.js"></script>
 	<script src="js/gpsService.js"></script>
 	<script src="js/deviceCtrl.js"></script>
+    <script src="js/navigationService.js"></script>
 	<script src="js/applications.js"></script>
 	<script src="js/installations.js"></script>
 	<script src="js/imageCapture.js"></script>
